feat: implement new layout, payment, and confirmation components; remove deprecated checkout components; add Hero component to enhance user experience

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,11 @@
     --font-baloo: 'Baloo 2', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 @layer base {
   :root {
         --background: 0 0% 100%;
